Agregar funcionalidad de reseteo automático al cambiar pestañas - La carta se cierra automáticamente al cambiar de sección - Los juegos se resetean al navegar entre pestañas - Modal de fotos se cierra al cambiar de sección - Corregir errores de sintaxis en funciones de navegación

--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
 
         <!-- Navegación -->
         <nav class="nav-menu">
-            <button class="nav-btn active" onclick="showSection('home')">
+            <button class="nav-btn active" onclick="showSection('home', this)">
                 <span>🏠</span> Inicio
             </button>
-            <button class="nav-btn" onclick="showSection('carta')">
+            <button class="nav-btn" onclick="showSection('carta', this)">
                 <span>💌</span> Carta
             </button>
-            <button class="nav-btn" onclick="showSection('galeria')">
+            <button class="nav-btn" onclick="showSection('galeria', this)">
                 <span>📸</span> Galería
             </button>
-            <button class="nav-btn" onclick="showSection('juegos')">
+            <button class="nav-btn" onclick="showSection('juegos', this)">
                 <span>🎮</span> Juegos
             </button>
-            <button class="nav-btn" onclick="showSection('sorpresas')">
+            <button class="nav-btn" onclick="showSection('sorpresas', this)">
                 <span>🎁</span> Sorpresas
             </button>
         </nav>
