Actualizar despedida de la carta

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               </p>
               <p>Te amo más de lo que las palabras pueden expresar.</p>
               <p class="letter-signature">
-                Con todo mi amor,<br /><span>Lucho 💕</span>
+                Vos sos esa simple razón,<br /><span>Lucho 💕</span>
               </p>
             </div>
           </div>
